<resources>
    <string name="app_name">Pacman</string>
    <string name="points">Points:</string>
    <string name="high_score">Highscore:</string>
    <string name="time">Time:</string>
    <string name="pause_button">Pause</string>
    <string name="continue_button">Continue</string>
    <string name="start_button">Start</string>
    <string name="move_right">Move Right</string>
    <string name="move_up">Move Up</string>
    <string name="move_left">Move Left</string>
    <string name="move_down">Move Down</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
</resources>
