<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="org.example.pacman.MainActivity" >

    <TextView
        android:id="@+id/points"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points" />

    <!-- Notice how the custom view is referenced here with
    a full package path-->

    <org.example.pacman.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

    </org.example.pacman.GameView>



    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/move_up"
        android:id="@+id/moveUp"/>

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/move_left"
            android:layout_alignParentStart="true"
            android:id="@+id/moveLeft"/>

        <Button
            android:id="@+id/moveRight"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/move_right"/>

    </RelativeLayout>

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/move_down"
        android:id="@+id/moveDown"/>




</LinearLayout>
